<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/ic_security"
            android:title="@string/security" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_settings"
            android:title="@string/profile" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_review"
                android:title="@string/rate_review" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_in"
                android:title="Sign in" />
        </menu>
    </item>

</menu>
