<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/back_fingerprint">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:text="@string/authentication_header" />

        <com.mattprecious.swirl.SwirlView
            android:id="@+id/swirl_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:elevation="4dp" />

        <TextView
            android:id="@+id/aut_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:text="@string/authentication_footer" />

        <TextView
            android:id="@+id/aut_help_backup_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:text="@string/authentication_backup_pin" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>